--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body
 {
-	background-color: lightpink;
+	background-color: #f9e6cb;
 }
 
 .container
@@ -28,7 +28,7 @@ img : hover
 
 .text_container
 {
-	margin-top: 81px;
+	margin-top: 34px;
 	margin-right: 310px;
 	float: right;
 	width: 250px;
@@ -124,4 +124,17 @@ img : hover
 {
 	margin-left: 50px;
 	margin-top: 340px;
+}
+
+.oct6
+{
+
+	margin-left: 30px;
+	margin-top: 30px;
+
+}
+
+#o6
+{
+	height: 115px;
 }
