--- a/assets/css/popup.css
+++ b/assets/css/popup.css
@@ -3,26 +3,39 @@
 		width: 0%;
 	}
 	100%{
-		width: 100%;
-		left: 0;
+		width: calc(100vw - 300px);
+		left: 300px;
 	}
 }
 @keyframes close{
 	0%{
-		width: 100%;
+		width: calc(100vw - 300px);
 	}
 	100%{
 		width: 0%;
 	}
 }
+@keyframes closebar{
+	0%{
+		width: 300px;
+	}
+	100%{
+		width: 0px;
+	}
+}
 .open{
-	animation: open 2s 0.2s ease-out both;
+	animation: open 1.5s  linear both;
 }
 .close{
-	animation: close 2s ease-out both;
+	animation: close 1.5s ease-out both;
+}
+.closebar{
+	animation: closebar 2s linear both;
 }
 .popup{
-	position: relative;
+	position: fixed;
+	z-index: 2;
+	left: 300px;
 	height: 100%;
 	display: none;
 	box-sizing: border-box;
@@ -62,13 +75,4 @@
 	font-size: 120%;
 	text-align: justify;
 }
-.popup-container{
-	position: absolute;
-	display: none;
-	left: 0;
-	top: 0;
-	width: 100%;
-	height: 100vh;
-	z-index: 5;
-	background-color: #808080;
-}
+
