--- a/assets/css/popup.css
+++ b/assets/css/popup.css
@@ -23,7 +23,7 @@
 	}
 }
 .open{
-	animation: open 1.5s  linear both;
+	animation: open 1.5s  ease-out both;
 }
 .close{
 	animation: close 1.5s ease-out both;
