--- a/assets/css/popup.css
+++ b/assets/css/popup.css
@@ -1,17 +1,25 @@
 @keyframes open{
 	0%{
 		width: 0%;
+		opacity: 0;
+		transform: scale(0.75);
 	}
 	100%{
 		width: calc(100vw - 300px);
+		opacity: 1;
+		transform: scale(1);
 	}
 }
 @keyframes close{
 	0%{
 		width: calc(100vw - 300px);
+		opacity: 1;
+		transform: scale(1);
 	}
 	100%{
 		width: 0%;
+		opacity: 0;
+		transform: scale(0.75);
 	}
 }
 @keyframes closebar{
@@ -23,17 +31,17 @@
 	}
 }
 .open{
-	animation: open 1.5s  ease-out both;
+	animation: open 0.5s cubic-bezier(.18,.89,.32,1.28) both;
 }
 .close{
-	animation: close 1.5s ease-out both;
+	animation: close 0.5s cubic-bezier(.6,-0.28,.74,.05) both;
 }
 .closebar{
 	animation: closebar 2s linear both;
 }
 .popup{
 	position: fixed;
-	z-index: 3;
+	z-index: 4;
 	left: 300px;
 	height: 100%;
 	display: none;
@@ -41,7 +49,7 @@
 	flex-direction: column;
 	align-items: center;
 	padding: 2%;
-	border :solid 20px #808080;
+	border :solid 20px #3D3E3E;
 	border-top:none;
 	border-bottom: none;
 	overflow: hidden;
@@ -72,4 +80,3 @@
 	font-size: 120%;
 	text-align: justify;
 }
-
