--- a/assets/css/skeleton.css
+++ b/assets/css/skeleton.css
@@ -4,6 +4,11 @@
 */
 * {
 	color: #3D3E3E;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	-webkit-touch-callout: none;
 }
 @keyframes hover{
 	0%{
@@ -57,6 +62,7 @@ body{
 .bar{
 	box-sizing: border-box;
 	height: 100%;
+	min-width: 140px;
 	width: calc(20vw - 60px);
 	display: flex;
 	justify-content: center;
@@ -88,7 +94,6 @@ body{
 }
 
 .left-tab > div{
-	border: 1px solid yellow;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -164,7 +169,7 @@ nav a {
 	height: 100%;
 	background-color: #222;
 	color: #fff !important;
-	z-index: 4;
+	z-index: 3;
 	overflow: hidden;
 	display: flex;
 	flex-direction: column;
@@ -178,19 +183,13 @@ nav a {
 .button * {
 	transform: color 1s ease-in;
 }
-.button:hover *{
-	color: #fff !important;
-}
 .button .overlay * {
 	color: #fff !important;
 	white-space: nowrap;
 }
-.button:hover .seperator {
-	background: #fff;
-}
 .overlay .seperator {
 	background: #fff;
 }
-.button:hover .overlay{
+.bar:hover .overlay{
 	animation: hover 0.3s ease-in both;
 }
