--- a/assets/css/skeleton.css
+++ b/assets/css/skeleton.css
@@ -66,7 +66,9 @@ body{
 	/*width: calc(20vw - 60px);*/
 	flex: 1;
 	display: flex;
-	justify-content: center;
+	flex-direction: column;
+	justify-content: flex-end;
+	align-items: center;
 	position: relative;
 }
 
@@ -75,8 +77,8 @@ body{
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	position: absolute;
-	bottom: 50px;
+	position: relative;
+	margin-bottom: 50px;
 	width: 100px;
 	height: 100px;
 	/*border: 1px solid #dd2255;*/
