--- a/assets/css/scroll.css
+++ b/assets/css/scroll.css
@@ -14,24 +14,29 @@
 .bar:nth-of-type(1){
 	background: #444 url("../img/Panel1.jpg") top center no-repeat;
 	background-position: 49% 0;
+	background-size: cover;
 }
 
 .bar:nth-of-type(2){
 	background: #777 url("../img/Panel2.jpg") top center no-repeat;
 	background-position: 47.5% 0;
+	background-size: cover;
 }
 
 .bar:nth-of-type(3){
 	background: #999 url("../img/Panel3.jpg") top center no-repeat;
 	background-position: 48% 0;
+	background-size: cover;
 }
 
 .bar:nth-of-type(4){
 	background: #bbb url("../img/Panel4.jpg") top center no-repeat;
 	background-position: 47.5% 0;
+	background-size: cover;
 }
 
 .bar:nth-of-type(5){
 	background: #ddd url("../img/Panel5.jpg") top center no-repeat;
 	background-position: 49% 0;
+	background-size: cover;
 }
