--- a/assets/css/popup.css
+++ b/assets/css/popup.css
@@ -46,14 +46,13 @@
 	height: 100%;
 	display: none;
 	box-sizing: border-box;
-	flex-direction: column;
+	justify-content: center;
 	align-items: center;
 	padding: 2%;
 	border :solid 20px #3D3E3E;
 	border-top:none;
 	border-bottom: none;
 	overflow: hidden;
-	background-color: #fff;
 }
 .a{
 	display: flex;
@@ -68,15 +67,41 @@
 	width: 30px;
 	height: 30px;
 }
-.popup img{
-	width: 200px;
-	height: 200px;
-	margin-bottom: 5%;
+.popup .video-container{
+	width: 800px;
+	height: 450px;
+	margin:auto;
+	background-color: #fff;
+	border:5px solid #3D3E3E;
+	box-shadow: 0px 0px 20px #3D3E3E;
 }
-.popup p{
-	line-height: 1.5em;
-	font-family: 'Roboto';
-	color: #808080;
-	font-size: 120%;
-	text-align: justify;
+.popup:nth-of-type(1){
+	background:url('../img/Panel1.jpg');
+	background-size: 100% 100%;
+	background-repeat: no-repeat;
 }
+
+.popup:nth-of-type(2){
+	background:url('../img/Panel2.jpg');
+	background-size: 100% 100%;
+	background-repeat: no-repeat;
+}
+
+.popup:nth-of-type(3){
+	background:url('../img/Panel3.jpg');
+	background-size: 100% 100%;
+	background-repeat: no-repeat;
+}
+
+.popup:nth-of-type(4){
+	background:url('../img/Panel4.jpg');
+	background-size: 100% 100%;
+	background-repeat: no-repeat;
+}
+
+.popup:nth-of-type(5){
+	background:url('../img/Panel5.jpg');
+	background-size: 100% 100%;
+	background-repeat: no-repeat;
+}
+
