--- a/assets/css/popup.css
+++ b/assets/css/popup.css
@@ -49,10 +49,9 @@
 	justify-content: center;
 	align-items: center;
 	padding: 2%;
-	border :solid 20px #3D3E3E;
-	border-top:none;
-	border-bottom: none;
+	border-left:solid 20px #3D3E3E;
 	overflow: hidden;
+	background-size: cover;
 }
 .a{
 	display: flex;
@@ -76,32 +75,21 @@
 	box-shadow: 0px 0px 20px #3D3E3E;
 }
 .popup:nth-of-type(1){
-	background:url('../img/Panel1.jpg');
-	background-size: 100% 100%;
-	background-repeat: no-repeat;
+	background:url('../img/Panel1.jpg') center top no-repeat;
 }
 
 .popup:nth-of-type(2){
-	background:url('../img/Panel2.jpg');
-	background-size: 100% 100%;
-	background-repeat: no-repeat;
+	background:url('../img/Panel2.jpg') center top no-repeat;
 }
 
 .popup:nth-of-type(3){
-	background:url('../img/Panel3.jpg');
-	background-size: 100% 100%;
-	background-repeat: no-repeat;
+	background:url('../img/Panel3.jpg') center top no-repeat;
 }
 
 .popup:nth-of-type(4){
-	background:url('../img/Panel4.jpg');
-	background-size: 100% 100%;
-	background-repeat: no-repeat;
+	background:url('../img/Panel4.jpg') center top no-repeat;
 }
 
 .popup:nth-of-type(5){
-	background:url('../img/Panel5.jpg');
-	background-size: 100% 100%;
-	background-repeat: no-repeat;
+	background:url('../img/Panel5.jpg') center top no-repeat;
 }
-
