--- a/assets/css/popup.css
+++ b/assets/css/popup.css
@@ -76,20 +76,25 @@
 }
 .popup:nth-of-type(1){
 	background:url('../img/Panel1.jpg') center top no-repeat;
+	background-size:cover;
 }
 
 .popup:nth-of-type(2){
 	background:url('../img/Panel2.jpg') center top no-repeat;
+	background-size:cover;
 }
 
 .popup:nth-of-type(3){
 	background:url('../img/Panel3.jpg') center top no-repeat;
+	background-size:cover;
 }
 
 .popup:nth-of-type(4){
 	background:url('../img/Panel4.jpg') center top no-repeat;
+	background-size:cover;
 }
 
 .popup:nth-of-type(5){
 	background:url('../img/Panel5.jpg') center top no-repeat;
+	background-size:cover;
 }
