--- a/assets/css/skeleton.css
+++ b/assets/css/skeleton.css
@@ -178,7 +178,10 @@ nav a:hover {
 .social {
 	color: transparent;
 	background-size: contain !important;
-	font-size: 30px !important;
+	font-size: 30px;
+}
+#facebook, #twitter, #youtube{
+	font-size: 30px;
 }
 .social:hover {
 	cursor: pointer;
@@ -243,9 +246,23 @@ nav a:hover {
 @media only screen and (max-width: 1000px){
 
 	.slider{
-		display: block;
+		display: flex;
+		flex-direction:column;
 	}
 	
+	.bar{
+		height: 20%;
+		width:100%;
+		justify-content: center;
+	
+	}
+
+	.button{
+		margin : 0;
+		align-self: flex-end;
+		margin-right: 50px;
+	}
+
 	.open, .close{
 		position: absolute;
 		top:0;
@@ -253,4 +270,12 @@ nav a:hover {
 		
 		left:0;
 	}
+
+	nav a{
+		font-size: 2em;
+	}
+	#facebook, #twitter, #youtube{
+		font-size: 40px;
+	}
+
 }
