--- a/assets/css/skeleton.css
+++ b/assets/css/skeleton.css
@@ -283,12 +283,12 @@ nav a:hover {
 	#pointerLeft {top: 44px;left: 10px;font-size:40px;}
 	#pointerRight {top: 44px;right: 10px;font-size:40px;}
 	#pointers div.plv, #pointers div.prv {color: inherit !important;}
-	#pointers div.pl1 {top:0px;left:-15px;}
-	#pointers div.pl2 {top:48px;left:-25px;}
-	#pointers div.pl3 {top:103px;left:-29px;}
-	#pointers div.pr1 {top:0px;right:-15px;}
-	#pointers div.pr2 {top:48px;right:-25px;}
-	#pointers div.pr3 {top:103px;right:-29px;}
+	#pointers div.pl1 {top:0px !important;left:-15px;}
+	#pointers div.pl2 {top:48px !important;left:-25px;}
+	#pointers div.pl3 {top:103px !important;left:-29px;}
+	#pointers div.pr1 {top:0px !important;right:-15px;}
+	#pointers div.pr2 {top:48px !important;right:-25px;}
+	#pointers div.pr3 {top:103px !important;right:-29px;}
 
 	span label{
 		font-size: 30px;
