integrating info.html and new.html into info.html

--- a/info.css
+++ b/info.css
@@ -7,7 +7,7 @@ body{
 	font: 18px/22px arial, verdana;
 }
 
-#container, #moving{
+#container, #movable{
 	background: transparent;
 	position: absolute;
 	height: 100%;
@@ -19,6 +19,8 @@ body{
 	/*border: 1px solid #000;*/
 	justify-content:center;
 	padding:0;
+	transform: perspective(10000px);
+	transform-style: preserve-3d;
 	/*margin: 100px 500px;
 */}
 
@@ -55,54 +57,72 @@ body{
 	top:0;
 	left:0;
 	z-index: -1;
+	width: 150px;
+    -webkit-clip-path: polygon(30% 0%, 70% 0%, 100% 30%, 100% 70%, 70% 100%, 30% 100%, 0% 70%, 0% 30%);
+    clip-path: polygon(30% 0%, 70% 0%, 100% 30%, 100% 70%, 70% 100%, 30% 100%, 0% 70%, 0% 30%);
+
+/*	border: 1px solid #000;*/
+	background: linear-gradient(#48aede, #97549C)
 }
 
 
-.o41{
+.o33:nth-of-type(7){
 	top: 30%;
 	left: 10%;
 	height: 380px;
+	width: 380px;
+	transform: translateZ(-100px);
 }
 
-.o11{
+.o33:nth-of-type(6){
 	top: 10%;
 	left: 85%;
-	height: 120px;
+	height: 150px;
 	transform: rotate(-60deg);
+	transform: translateZ(0px) rotate(-50deg);
 }
 
-.o21{
+.o33:nth-of-type(5){
 	top: 70%;
 	left: 85%;
 	height: 150px;
-	
+	transform: translateZ(-50px);
 }
 
-.o31{
+.o33:nth-of-type(4){
 	top: 80%;
 	left: 10%;
-	transform: skew(20deg) rotate(90deg);
-	height: 100px;
+	transform: rotate(20deg) rotate(90deg) translateZ(150px);
+	height: 150px;
 	
 }
 
-.o12{
+.o33:nth-of-type(3){
 	top: 15%;
 	left: 50%;
-	height: 120px;
-	transform: rotate(240deg);
+	height: 150px;
+	transform: rotate(240deg) translateZ(150px);
 }
 
-.o32{
+.o33:nth-of-type(2){
 	top: 80%;
 	left: 60%;
-	transform: skew(-10deg);
-	height: 120px;
+	transform: rotate(-10deg) translateZ(-50px);
+	height: 75px;
+	width: 75px;
+	
 }
 
 .o33{
+	height: 150px;
+
+}
+
+.o33:nth-of-type(1){
 	top: 5%;
 	left: 5%;
-	transform: skew(-15deg) rotate(180deg);
-	height: 150px;
+	transform: rotate(180deg) translateZ(-100px);
+	height: 75px;
+	width: 75px;
 }
+
