--- a/info.css
+++ b/info.css
@@ -19,7 +19,7 @@ body{
 	/*border: 1px solid #000;*/
 	justify-content:center;
 	padding:0;
-	transform: perspective(10000px);
+	transform: perspective(5990px);
 	transform-style: preserve-3d;
 	/*margin: 100px 500px;
 */}
@@ -77,7 +77,8 @@ body{
 .o33:nth-of-type(6){
 	top: 10%;
 	left: 85%;
-	height: 150px;
+	height: 125px;
+	width: 125px;
 	transform: rotate(-60deg);
 	transform: translateZ(0px) rotate(-50deg);
 }
@@ -85,7 +86,8 @@ body{
 .o33:nth-of-type(5){
 	top: 70%;
 	left: 85%;
-	height: 150px;
+	height: 125px;
+	width: 125px;
 	transform: translateZ(-50px);
 }
 
