--- a/assets/css/info.css
+++ b/assets/css/info.css
@@ -1,10 +1,14 @@
-body{
-	background-color:#dadeff;
+
+.info{
+	background-color:rgb(239, 229, 246);
 	height: 100vh;
-	width: 100vw;
-	padding:0;
-	margin:0;
-	font: 18px/22px arial, verdana;
+	width: calc(100% - 20px);
+	position:absolute;
+	right: 20px;
+	top:0;
+	z-index: -1;
+	display: block;
+	font-family: "Coves";
 }
 
 #info-container, #movable{
@@ -48,7 +52,7 @@ body{
 }
 
 .image-main{
-	background: url('Assets/Exports/tardis.png') 0 0  no-repeat;
+	background: url('../Exports/tardis.png') 0 0  no-repeat;
 	background-size: auto 400px;
 }
 
@@ -62,16 +66,16 @@ body{
     clip-path: polygon(30% 0%, 70% 0%, 100% 30%, 100% 70%, 70% 100%, 30% 100%, 0% 70%, 0% 30%);
 
 /*	border: 1px solid #000;*/
-	background: linear-gradient(#48aede, #97549C)
+	background: linear-gradient(rgb(33, 164, 255), rgb(190, 0 , 255))
 }
 
 
 .o33:nth-of-type(7){
-	top: 30%;
-	left: 10%;
-	height: 380px;
-	width: 380px;
-	transform: translateZ(-100px);
+	top: 45%;
+	left: 7%;
+	height: 300px;
+	width: 300px;
+	transform: translateZ(-100px) skew(30deg);
 }
 
 .o33:nth-of-type(6){
