--- a/assets/css/info.css
+++ b/assets/css/info.css
@@ -2,9 +2,9 @@
 .info{
 	background-color:transparent;
 	height: 100vh;
-	width: calc(100% - 20px);
+	width: calc(100% - 35px);
 	position:absolute;
-	right: 20px;
+	right: 35px;
 	top:0;
 	z-index: -1;
 	display: block;
@@ -35,6 +35,12 @@
 	display: none;
 
 }
+
+.movable{
+	top:0;
+	bottom: 0;
+}
+
 
 .main{
 	display:flex;
@@ -174,15 +180,16 @@
 .slider-container .left-arrow{
 	z-index: 1;
 	cursor: pointer;
-	background-color: #000;
-	width: 20px;
-	height: 20px;
+	
+	width: 25px;
+	height: 25px;
 	background: url('../img/left.png') 0 0 no-repeat;
 	background-size: cover;
 	position: absolute;
 	top : calc(50vh - 10px);
-	margin:0px;
+	margin:5px;
 	display: none;
+	color: #fff;
 }
 
 .info_open{
