--- a/assets/css/info.css
+++ b/assets/css/info.css
@@ -202,3 +202,27 @@
 .info_open{
 	display:flex;
 }
+
+@media only screen and (max-width: 1000px){
+	.image-main{
+		display:none;
+	}
+	.content{
+		margin: 0 auto;
+		z-index: 1;
+	}
+
+	.o33:nth-of-type(7){
+		display: none;
+	}
+
+	.content h2{
+		font-size: 50px;
+	}
+
+	.content p{
+		font-size: 25px;
+	}
+
+
+}
