--- a/assets/css/popup.css
+++ b/assets/css/popup.css
@@ -74,6 +74,10 @@
 	border:5px solid #3D3E3E;
 	box-shadow: 0px 0px 20px #3D3E3E;
 }
+.popup .video-container iframe {
+	width: 100%;
+	height: 100%;
+}
 .popup:nth-of-type(1){
 	background:url('../img/Panel1.jpg') center top no-repeat;
 	background-size:cover;
