--- a/assets/css/regstyle.css
+++ b/assets/css/regstyle.css
@@ -231,3 +231,22 @@
 .register_here input[type=radio]{
 	margin-top: 5px;
 }
+
+.msg{
+	width: 100%;
+	
+	border-radius: 6px;
+	position: absolute;
+	display: none;
+	
+}
+.msg p{
+	margin: 10px auto;
+	width: 400px;
+	color: #3d3e3e;
+	font-size: 22px;
+	padding: 10px;
+	background: #ddd;
+	text-align: center;
+	border: 1px solid #000;
+}
